--- a/TylorBookStore/Views/Shared/_Layout.cshtml
+++ b/TylorBookStore/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TylorBookStore.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -41,7 +42,8 @@
 
     <footer class="border-top footer bg-primary text-white-50">
         <div class="container">
-            &copy; 2023 - TylorBookStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Tylor's Book Store - <a asp-area="" asp-controller="About" asp-action="Index">About Me</a>
+            - Made with <i class="bi bi-heart-fill"></i> by Tylor Trub
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
