--- a/TylorBookStore/Views/Category/Create.cshtml
+++ b/TylorBookStore/Views/Category/Create.cshtml
@@ -1,1 +1,31 @@
-﻿<h1>Create Category</h1>
+﻿@model Category
+
+<h1>Create Category</h1>
+<form method="post">
+    <div class="border p-3 mt-4">
+        <div class="row pb-2">
+            <h2 class="text-primary">Create Category</h2>
+            <hr/>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Name" class="p-0"></label>
+            <input asp-for="Name" type="text" class="form-control"/>
+        </div>
+        <div class="mb-3">
+            <label asp-for="DisplayOrder" class="p-0"></label>
+            <input asp-for="DisplayOrder" class="form-control" />
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <button type="submit" class="btn btn-primary form-control">Create</button>
+            </div>
+            <div class="col-6 col-md-3">
+                <a asp-controller="Category" asp-action="Index" class="btn text-white border btn-outline-secondary form-control">
+                    Back To List
+                </a>
+            </div>
+        </div>
+        
+    </div>
+</form>
