--- a/TylorBookStore/Views/Category/Create.cshtml
+++ b/TylorBookStore/Views/Category/Create.cshtml
@@ -7,13 +7,16 @@
             <h2 class="text-primary">Create Category</h2>
             <hr/>
         </div>
+        @*<div asp-validation-summary="ModelOnly"></div>*@
         <div class="mb-3">
             <label asp-for="Name" class="p-0"></label>
             <input asp-for="Name" type="text" class="form-control"/>
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="DisplayOrder" class="p-0"></label>
             <input asp-for="DisplayOrder" class="form-control" />
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
 
         <div class="row">
@@ -29,3 +32,9 @@
         
     </div>
 </form>
+
+@section Scripts {
+    @{
+    <partial name="_ValidationScriptsPartial"/>
+    }
+}
