--- a/TylorBookStore/Views/Category/Index.cshtml
+++ b/TylorBookStore/Views/Category/Index.cshtml
@@ -28,6 +28,8 @@
             <th>
                 Display Order
             </th>
+            <th>
+            </th>
         </tr>
         <tbody>
             @foreach(var obj in Model.OrderBy(u=>u.DisplayOrder))
@@ -35,6 +37,16 @@
             <tr>
                 <td>@obj.Name</td>
                 <td>@obj.DisplayOrder</td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash"></i> Delete
+                        </a>
+                    </div> 
+                </td>
             </tr>
             }
         </tbody>
