--- a/TylorBookStore/Views/Category/Index.cshtml
+++ b/TylorBookStore/Views/Category/Index.cshtml
@@ -39,10 +39,10 @@
                 <td>@obj.DisplayOrder</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Category" asp-action="Edit" class="btn btn-primary mx-2">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
-                        <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                            <a asp-controller="Category" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash"></i> Delete
                         </a>
                     </div> 
