Updated views to use toast updates w. tempdata. Toasts are next.

--- a/TylorBookStore/Views/Category/Index.cshtml
+++ b/TylorBookStore/Views/Category/Index.cshtml
@@ -1,8 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    
+﻿@{
+    ViewData["Title"] = "Categories";
 }
 
 @model List<Category>
@@ -36,7 +33,9 @@
             {
             <tr>
                 <td>@obj.Name</td>
-                <td>@obj.DisplayOrder</td>
+                <td>
+                    @obj.DisplayOrder
+                </td>
                 <td>
                     <div class="w-75 btn-group" role="group">
                         <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
