--- a/TylorBookStore/Views/Category/Delete.cshtml
+++ b/TylorBookStore/Views/Category/Delete.cshtml
@@ -1,31 +1,32 @@
 ﻿@{
-    ViewData["Title"] = "Create Category";
+    ViewData["Title"] = "Delete Category";
 }
 
 @model Category
 
-<h1>Create Category</h1>
+<h1>Delete Category</h1>
 <form method="post">
+    <input asp-for="Id" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Category</h2>
-            <hr/>
+            <h2 class="text-primary">Delete Category</h2>
+            <hr />
         </div>
         @*<div asp-validation-summary="ModelOnly"></div>*@
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
-            <input asp-for="Name" class="form-control"/>
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <input asp-for="Name" disabled class="form-control" />
+            @*No Validation needed for deletes.*@
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" class="form-control" />
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+            <input asp-for="DisplayOrder" disabled class="form-control" />
+            @*No Validation needed for deletes.*@
         </div>
 
         <div class="row">
             <div class="col-6">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-danger form-control">Delete</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn text-white border btn-outline-secondary form-control">
@@ -33,12 +34,6 @@
                 </a>
             </div>
         </div>
-        
+
     </div>
 </form>
-
-@section Scripts {
-    @{
-    <partial name="_ValidationScriptsPartial"/>
-    }
-}
