Removed about page. Will make Home controller my portfolio main landing site.

--- a/TylorBookStore/Views/Category/Index.cshtml
+++ b/TylorBookStore/Views/Category/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 @model List<Category>
+<partial name="_Notification"/>
+@if (TempData["success"] != null)
+{
+    <h2>@TempData["success"]</h2>
+}
 
 <div class="container">
     <div class="row pt-4">
