Updated namespaces to reflect my portfolio desired naming convention.

--- a/TylorBookStore/Views/_ViewImports.cshtml
+++ b/TylorBookStore/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TylorBookStore
-@using TylorBookStore.Models
+﻿@using TylorPortfolio
+@using TylorPortfolio.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
