Migrated folders and solution relative paths.

--- a/TylorPortfolio/Views/Shared/_Layout.cshtml
+++ b/TylorPortfolio/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-white-50" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white-50" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-white-50" asp-controller="Category" asp-action="Index">Categories</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white-50" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -41,7 +41,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer bg-primary text-white-50">
+    <footer class="border-top page-footer fixed-bottom mt-auto py-3 bg-primary text-white-50">
         <div class="container">
             &copy; 2023 - Tylor's Book Store - <a asp-area="" asp-controller="About" asp-action="Index">About Me</a>
             - Made with <i class="bi bi-heart-fill"></i> by Tylor Trub
