--- a/TylorBookStore/Views/Shared/_Layout.cshtml
+++ b/TylorBookStore/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Tylor's Book Store</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Tylor Trub's Portfolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,8 +24,20 @@
                         <li class="nav-item">
                             <a class="nav-link text-white-50" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-seperator">
+                            |
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white-50" asp-controller="Category" asp-action="Index">Category</a>
+                            <a class="nav-link text-white-50" asp-controller="Category" asp-action="Index">Movie Categories</a>
+                        </li>
+                        <li class="nav-seperator">
+                            |
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white-50" asp-controller="Motorcycle" asp-action="Index">Motorcycles</a>
+                        </li>
+                        <li class="nav-seperator">
+                            |
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white-50" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -43,8 +55,8 @@
 
     <footer class="border-top footer bg-primary text-white-50">
         <div class="container">
-            &copy; 2023 - Tylor's Book Store - <a asp-area="" asp-controller="About" asp-action="Index">About Me</a>
-            - Made with <i class="bi bi-heart-fill"></i> by Tylor Trub
+            &copy; 2023 - Tylor's Portfolio - <a asp-area="" asp-controller="About" asp-action="Index">About Me</a>
+            - Made with <i class="bi bi-heart-fill"></i> by Tylor Christian Trub
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
