--- a/TylorBookStore/Views/_ViewImports.cshtml
+++ b/TylorBookStore/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TylorPortfolio
-@using TylorPortfolio.Models
+﻿@using TylorTrubPortfolio
+@using TylorTrubPortfolio.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
