--- a/TylorBookStore/wwwroot/css/site.css
+++ b/TylorBookStore/wwwroot/css/site.css
@@ -20,3 +20,16 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+}
+
+.nav-seperator {
+    padding-top: 1px;
+    font-size: 24px;
+    font-family: 'Comic Sans MS';
+}
