Updated namespaces to be unified. Updated category controller with details. Updated motorcycle controller with corrected details view routing info. Updated collection, details, index and store views of motorcycle. Added motorcycle resource images. Added and fixed motorcycle db context for motorcycle db. Added bookstore db context. Updated motorcycle model.

--- a/TylorBookStore/Views/Category/Index.cshtml
+++ b/TylorBookStore/Views/Category/Index.cshtml
@@ -37,7 +37,9 @@
             @foreach(var obj in Model.OrderBy(u=>u.DisplayOrder))
             {
             <tr>
-                <td>@obj.Name</td>
+                <td>
+                    @obj.Name
+                </td>
                 <td>
                     @obj.DisplayOrder
                 </td>
