--- a/TylorBookStore/Views/Motorcycle/Collection.cshtml
+++ b/TylorBookStore/Views/Motorcycle/Collection.cshtml
@@ -1,1 +1,2 @@
 ﻿<h2>test</h2>
+<p>This should be a video carousel, with local or G-Drive incorporation, and maybe a link from the index portfolio trails here.</p>
