--- a/TylorBookStore/Views/Motorcycle/Index.cshtml
+++ b/TylorBookStore/Views/Motorcycle/Index.cshtml
@@ -1,11 +1,14 @@
-﻿<h1>
-    Welcome to my Motorcycle section!
-</h1>
+﻿@model List<Motorcycle>
 
-<a asp-controller="Motorcycle" asp-action="Store" class="btn btn-primary">
-    <i class="bi bi-shop-window"></i> Visit Motorcycle Store
-</a>
-<br />
+<h1>
+    Welcome to the Motorcycle section of my developer portfolio!
+</h1>
 <a asp-controller="Motorcycle" asp-action="Collection" class="btn btn-primary">
     <i class="bi bi-box2-heart"></i> Visit my Motorcycle Collection and footage
+</a>
+<br />
+<br />
+<br />
+<a asp-controller="Motorcycle" asp-action="Store" class="btn btn-primary">
+    <i class="bi bi-shop-window"></i> Visit Motorcycle Store
 </a>
