--- a/TylorBookStore/Views/Shared/_Layout.cshtml
+++ b/TylorBookStore/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             |
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white-50" asp-controller="Category" asp-action="Index">Movie Categories</a>
+                            <a class="nav-link text-white-50" asp-controller="Category" asp-action="Index">Book Categories</a>
                         </li>
                         <li class="nav-seperator">
                             |
