--- a/TylorBookStore/Views/Motorcycle/Store.cshtml
+++ b/TylorBookStore/Views/Motorcycle/Store.cshtml
@@ -1,1 +1,56 @@
-﻿<h1>Hello store!</h1>
+﻿@{
+    ViewData["Title"] = "Motorcycle Store";
+}
+
+@model List<Motorcycle>
+<partial name="_Notification" />
+@if (TempData["success"] != null)
+{
+    <h2>@TempData["success"]</h2>
+}
+
+<div class="container">
+    <h1>Motorcycle Store - New and used Bikes</h1>
+
+    <table class="table table-bordered table-striped table-dark">
+        <tr>
+            <th>
+                Motorcycle
+            </th>
+            <th>
+                Manufacturer
+            </th>
+            <th>
+                Engine CCs
+            </th>
+            <th>
+                Image
+            </th>
+            <th>
+                Year
+            </th>
+            <th>
+                BUY
+            </th>
+        </tr>
+        <tbody>
+            @foreach (var motor in Model)
+            {
+                <tr>
+                    <td>@motor.MotorcycleName</td>
+                    <td>@motor.Manufacturer</td>
+                    <td>@motor.MotorcycleCc</td>
+                    <td>
+                        <img src="~/Resources/Images/@motor.Picture" width="356px" height="200px" class="border-0 rounded">                        
+                    </td>
+                    <td>@motor.Year</td>
+                    <td>
+                        <a asp-controller="Motorcycle" asp-action="Details" asp-route-id="@motor.Id" class="m-4 p-6 p btn btn-primary mx-auto w-100">
+                            <i class="bi bi-cart-plus"></i> BUY
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
