NOTE: Potentially breaking. Added games section. CRUD is still working.. I am worried there are issues I am not seeing but lets commit anyways.
Why are there so many changes: Added Areas logic to MVC IRepo pattern.

--- a/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -5,3 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to Tylor Trub's portfolio.</h1>
 </div>
+
+<a href="www.google.com">Test me google link.</a>
