Product Controller fixed with routing issues. Updated navigation for products. Updated Product repo. Hangman view added. SimonSays view added.

--- a/TylorBookStore/Views/Shared/_Layout.cshtml
+++ b/TylorBookStore/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                                     <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Book Categories</a>
                                 </li>
                                 <li>
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Book Categories</a>
+                                    <a class="nav-link" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
