Deleted migrations and regenerated DB fresh. Added code to product controller. Improved product create, delete, edit models. Added props to product.

--- a/TylorBookStore/Views/Shared/_Layout.cshtml
+++ b/TylorBookStore/Views/Shared/_Layout.cshtml
@@ -68,10 +68,10 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="Hangman">Hangman</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="Hangman">Hangman!</a>
                                 </li>
                                 <li>
-                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="SimonSays">SimonSays</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="SimonSays">SimonSays!</a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
