Updated prod controller Updated create view Updated product model Updated csproj.

--- a/TylorBookStore/Areas/Admin/Views/Product/Create.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Product/Create.cshtml
@@ -52,6 +52,18 @@
             <input asp-for="Price100" class="form-control" />
             <span asp-validation-for="Price100" class="text-danger"></span>
         </div>
+        <div class="mb-3 row p-1">
+            <label asp-for="CategoryId" class="p-0"></label>
+            <select asp-for="CategoryId" asp-items="ViewBag.CategoryList" class="form-select">
+                <option disabled selected>--Select Category--</option>
+            </select>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
+        <div class="mb-3 row p-1">
+            <label asp-for="ImageUrl" class="p-0"></label>
+            <input asp-for="ImageUrl" class="form-control" />
+            <span asp-validation-for="ImageUrl" class="text-danger"></span>
+        </div>
 
         <div class="row">
             <div class="col-6">
