--- a/TylorBookStore/Views/_ViewImports.cshtml
+++ b/TylorBookStore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TylorTrubPortfolio
 @using TylorTrubPortfolio.Models
+@using TylorTrubPortfolio.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
