store motorcycle images migration

--- a/TylorBookStore/Areas/Admin/Views/Motorcycle/Store.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Motorcycle/Store.cshtml
@@ -41,7 +41,7 @@
                     <td>@motor.Manufacturer</td>
                     <td>@motor.MotorcycleCc</td>
                     <td>
-                        <img src="~/Resources/Images/@motor.Picture" width="356px" height="200px" class="border-0 rounded">                        
+                        <img src="~/Images/motorcycle/@motor.Picture" width="356px" height="200px" class="border-0 rounded">                        
                     </td>
                     <td>@motor.Year</td>
                     <td>
