--- a/TylorBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -24,8 +24,7 @@
             </div>
             <div class="mb-3 row p-1">
                 <label asp-for="Product.Description" class="p-0"></label>
-                <input asp-for="Product.Description" class="form-control" />
-                <span asp-validation-for="Product.Description" class="text-danger"></span>
+                <textarea asp-for="Product.Description" class="form-control" ></textarea>
             </div>
             <div class="mb-3 row p-1">
                 <label asp-for="Product.ISBN" class="p-0"></label>
@@ -95,6 +94,19 @@
 </div>
 
 @section Scripts {
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ]
+        });
+    </script>
     @{
         <partial name="_ValidationScriptsPartial" />
     }
