--- a/TylorBookStore/Views/Shared/_Layout.cshtml
+++ b/TylorBookStore/Views/Shared/_Layout.cshtml
@@ -102,6 +102,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.tiny.cloud/1/dglg1u3d7s2qu7xmi465k28jt6pkuiuwr27b2zjfpy5pp61c/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
