Added proper image support.

--- a/TylorBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -15,80 +15,91 @@
     <div class="card-body p-4">
     <form method="post" enctype="multipart/form-data">
         <input asp-for="Product.Id" hidden />
-        <div class="border p-3 mt-4">
-            @*<div asp-validation-summary="ModelOnly"></div>*@
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.Title" class="p-0"></label>
-                <input asp-for="Product.Title" class="form-control" />
-                <span asp-validation-for="Product.Title" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.Description" class="p-0"></label>
-                <textarea asp-for="Product.Description" class="form-control" ></textarea>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.ISBN" class="p-0"></label>
-                <input asp-for="Product.ISBN" class="form-control" />
-                <span asp-validation-for="Product.ISBN" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.Author" class="p-0"></label>
-                <input asp-for="Product.Author" class="form-control" />
-                <span asp-validation-for="Product.Author" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.ListPrice" class="p-0"></label>
-                <input asp-for="Product.ListPrice" class="form-control" />
-                <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.Price" class="p-0"></label>
-                <input asp-for="Product.Price" class="form-control" />
-                <span asp-validation-for="Product.Price" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.Price50" class="p-0"></label>
-                <input asp-for="Product.Price50" class="form-control" />
-                <span asp-validation-for="Product.Price50" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.Price100" class="p-0"></label>
-                <input asp-for="Product.Price100" class="form-control" />
-                <span asp-validation-for="Product.Price100" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.CategoryId" class="p-0"></label>
-                <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
-                    <option disabled selected>--Select Category--</option>
-                </select>
-                <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
-            </div>
-            <div class="mb-3 row p-1">
-                <label asp-for="Product.ImageUrl" class="p-0"></label>
-                <input type="file" class="form-control" />
-                <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
-            </div>
+        <input asp-for="Product.ImageUrl" hidden />
+        <div class="row">
+            <div class="col-10">
+                    <div class="border p-3 mt-4">
+                        @*<div asp-validation-summary="ModelOnly"></div>*@
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.Title" class="p-0"></label>
+                            <input asp-for="Product.Title" class="form-control" />
+                            <span asp-validation-for="Product.Title" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.Description" class="p-0"></label>
+                            <textarea asp-for="Product.Description" class="form-control"></textarea>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.ISBN" class="p-0"></label>
+                            <input asp-for="Product.ISBN" class="form-control" />
+                            <span asp-validation-for="Product.ISBN" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.Author" class="p-0"></label>
+                            <input asp-for="Product.Author" class="form-control" />
+                            <span asp-validation-for="Product.Author" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.ListPrice" class="p-0"></label>
+                            <input asp-for="Product.ListPrice" class="form-control" />
+                            <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.Price" class="p-0"></label>
+                            <input asp-for="Product.Price" class="form-control" />
+                            <span asp-validation-for="Product.Price" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.Price50" class="p-0"></label>
+                            <input asp-for="Product.Price50" class="form-control" />
+                            <span asp-validation-for="Product.Price50" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.Price100" class="p-0"></label>
+                            <input asp-for="Product.Price100" class="form-control" />
+                            <span asp-validation-for="Product.Price100" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.CategoryId" class="p-0"></label>
+                            <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
+                                <option disabled selected>--Select Category--</option>
+                            </select>
+                            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 row p-1">
+                            <label asp-for="Product.ImageUrl" class="p-0"></label>
+                            <input type="file" name="file" class="form-control" />
+                            <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+                        </div>
 
-            <div class="row">
-                <div class="col-6">
-                    @if(Model.Product.Id!=0)
-                    {
-                        <button type="submit" class="btn btn-primary form-control">Update</button>
-                    }
-                    else
-                    {
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
-                    }
-                    
-                </div>
-                <div class="col-6 col-md-3">
-                    <a asp-controller="Product" asp-action="Index" class="btn text-white border btn-outline-secondary form-control">
-                        Back To List
-                    </a>
-                </div>
-            </div>
+                        <div class="row">
+                            <div class="col-6">
+                                @if (Model.Product.Id != 0)
+                                {
+                                    <button type="submit" class="btn btn-primary form-control">Update</button>
+                                }
+                                else
+                                {
+                                    <button type="submit" class="btn btn-primary form-control">Create</button>
+                                }
 
+                            </div>
+                            <div class="col-6 col-md-3">
+                                <a asp-controller="Product" asp-action="Index" class="btn text-white border btn-outline-secondary form-control">
+                                    Back To List
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+            </div>
+            <div class="col-2">
+                <img src="@Model.Product.ImageUrl" width="100%"
+                    style="border-radius:5px; border:1px solid #bbb9b9"/>
+
+            </div>
         </div>
+        
     </form>
 </div>
 </div>
