--- a/TylorBookStore/wwwroot/css/site.css
+++ b/TylorBookStore/wwwroot/css/site.css
@@ -38,3 +38,41 @@ footer {
     color: ghostwhite;
 
 }
+
+.btn-simon-cyan {
+    background-color: cyan;
+    border-radius: 0px 0px 30px 0px;
+}
+
+.btn-simon-red {
+    background-color: red;
+    border-radius: 0px 30px 0px 0px;       
+}
+
+.btn-simon-green {
+    background-color: green;
+    border-radius: 30px 0px 0px 0px;
+}
+
+.btn-simon-orange {
+    background-color: orange;
+    border-radius: 0px 0px 0px 30px;
+}
+
+.btn-simon {
+    width: 100%;
+    height: 100%;
+    border: solid;
+    opacity: .3
+}
+
+.btn-simon:hover {
+    width: 102%;
+    height: 102%;
+    opacity: 0.7;
+}
+
+td[colspan="4"] {
+    text-align: center;
+    opacity: .8;
+}
