--- a/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
@@ -1,37 +1,36 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Simon Says";
+
+    void CounterInc()
+    {
+        Model.sequenceCounter++;
+    }
+}
+
+@model SimonSays
+
 <div class="container">
-    <div class="row align-items-start">
-        <div class="col">
-            <h2 class="text-primary">
-                Welcome to Simon Says
-            </h2>
-            <h3 class="text-primary">
-                Level: 0
-            </h3>
-        </div>        
-    </div>
-    <div class="row align-items-center">
-        <div class="col">
-            <button class="btn-simon-green btn-simon">test1</button>
-        </div>
-        <div class="col">
-            <button class="btn-simon-red btn-simon">test2</button>
-        </div>
 
-    </div>
-    <div class="row align-items-center">
-        <div class="col">
-            <button class="btn-simon-orange btn-simon">test3</button>
-        </div>
-        <div class="col">
-            <button class="btn-simon-cyan btn-simon">test4</button>
-        </div>
+    <h2>NEW!</h2>
+    @Model.sequenceCounter
 
-    </div>
+    <div style="position:relative; width:100%;  margin:auto; display:block;">
+        <div style="position: relative; border-radius: 50%; margin: auto; padding: 5vmin; width: 75vmin; height: 75vmin; background: rgba(0,0,49,0.6); ">
+            <div style="position: relative; border-radius: 50%; width: 100%; height: 100%; overflow: hidden;">
+                <button class="btn-simon btn-simon-green" id="0" style="opacity: 0.3;"></button>
+                <button class="btn-simon btn-simon-red" id="1" style="opacity: 0.3;"></button>
+                <button class="btn-simon btn-simon-orange" id="2" style="opacity: 0.3;"></button>
+                <button class="btn-simon btn-simon-cyan" id="3" style="opacity: 0.3;"></button>
+                <div id="circ" style="position: absolute; margin: 30% 30%; border-radius: 50%; border: 3px solid #111; width: 38%;   height: 38%; background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, #777777 80%), #004; color: #fff; box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);">
+                    <input type="button" value="test12" onclick="@Model.sequenceCounter++">
+                        @(Model.sequenceCounter != 0 ? Model.sequenceCounter : "Play")
+                    </input>
+                </div>
+            </div>
+            <div id="msg" style="display: flex; align-items: center; justify-content: center; text-align: center; position: absolute; left: 40%; top: 40%; font: 9vmin Arial; width: 20%; height: 20%; color: rgb(187, 204, 255); pointer-events: none;">
+                              
 
-    <div>
-        <a asp-controller="Games" asp-action="SimonSays" class="btn btn-primary">
-            <i class="bi bi-play-fill"></i> Press
-        </a>
+            </div>
+        </div>
     </div>
 </div>
