--- a/TylorBookStore/wwwroot/css/site.css
+++ b/TylorBookStore/wwwroot/css/site.css
@@ -36,39 +36,47 @@ footer {
 
 .nav-link:hover {
     color: ghostwhite;
-
-}
-
-.btn-simon-cyan {
-    background-color: cyan;
-    border-radius: 0px 0px 30px 0px;
-}
-
-.btn-simon-red {
-    background-color: red;
-    border-radius: 0px 30px 0px 0px;       
 }
 
 .btn-simon-green {
+    top: 0;
+    left: 0;
     background-color: green;
     border-radius: 30px 0px 0px 0px;
 }
 
+.btn-simon-red {
+    top: 0;
+    right: 0;
+    background-color: red;
+    border-radius: 0px 30px 0px 0px;       
+}
+
 .btn-simon-orange {
+    bottom: 0;
+    left: 0;
     background-color: orange;
     border-radius: 0px 0px 0px 30px;
 }
 
+.btn-simon-cyan {
+    bottom: 0;
+    right: 0;
+    background-color: cyan;
+    border-radius: 0px 0px 30px 0px;
+}
+
 .btn-simon {
-    width: 100%;
-    height: 100%;
-    border: solid;
-    opacity: .3
+    opacity: .3;
+    position: absolute;
+    border: none;
+    width: 48%;
+    height: 48%;
+    overflow: hidden;
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,1);
 }
 
 .btn-simon:hover {
-    width: 102%;
-    height: 102%;
     opacity: 0.7;
 }
 
