--- a/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
@@ -22,9 +22,9 @@
                 <button class="btn-simon btn-simon-orange" id="2" style="opacity: 0.3;"></button>
                 <button class="btn-simon btn-simon-cyan" id="3" style="opacity: 0.3;"></button>
                 <div id="circ" style="position: absolute; margin: 30% 30%; border-radius: 50%; border: 3px solid #111; width: 38%;   height: 38%; background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, #777777 80%), #004; color: #fff; box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);">
-                    <input type="button" value="test12" onclick="@Model.sequenceCounter++">
-                        @(Model.sequenceCounter != 0 ? Model.sequenceCounter : "Play")
-                    </input>
+                    <a asp-controller="Games" asp-action="SimonBeginPlay" name="SimonBeginPlay" value="@(Model.sequenceCounter != 0 ? Model.sequenceCounter : "Play")">
+                        workl  uwutyfduwag
+                    </a>
                 </div>
             </div>
             <div id="msg" style="display: flex; align-items: center; justify-content: center; text-align: center; position: absolute; left: 40%; top: 40%; font: 9vmin Arial; width: 20%; height: 20%; color: rgb(187, 204, 255); pointer-events: none;">
