Updated simon says

--- a/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
@@ -35,7 +35,7 @@
 
                     <a asp-controller="Games" asp-action="SimonSays" name="SimonSays">
                         @(Model.sequenceCounter != 0 ? Model.sequenceCounter : "Play")
-                        WORK
+                        WORK PLEASE
                         @TempData["test"] IS ALEGEDLY 1
                     </a>
                 </div>
