test to see it GH is down

--- a/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
@@ -25,7 +25,7 @@
                     <a asp-controller="Games" asp-action="SimonSays" name="SimonSays">
                         @(Model.sequenceCounter != 0 ? Model.sequenceCounter : "Play")
                         WORK PLEASE :/
-                        @TempData["test"] IS ALWAYS 1, WHY!
+                        @TempData["test"] IS ALWAYS 1, WHY!!
                     </a>
                 </div>
             </div>
