--- a/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Games/SimonSays.cshtml
@@ -1,38 +1,34 @@
 ﻿@{
-    ViewData["Title"] = "Simon Says";
-
-    void CounterInc()
-    {
-        Model.sequenceCounter++;
-    }
+    ViewData["Title"] = "Simon Says";    
 }
 
-@model SimonSays
+@model List<SimonSays>
 
 <div class="container">
 
     <h2>NEW!</h2>
-    @Model.sequenceCounter
 
     <div style="position:relative; width:100%;  margin:auto; display:block;">
         <div style="position: relative; border-radius: 50%; margin: auto; padding: 5vmin; width: 75vmin; height: 75vmin; background: rgba(0,0,49,0.6); ">
             <div style="position: relative; border-radius: 50%; width: 100%; height: 100%; overflow: hidden;">
-                <button class="btn-simon btn-simon-green" id="0" style="opacity: 0.3;"></button>
-                <button class="btn-simon btn-simon-red" id="1" style="opacity: 0.3;"></button>
-                <button class="btn-simon btn-simon-orange" id="2" style="opacity: 0.3;"></button>
-                <button class="btn-simon btn-simon-cyan" id="3" style="opacity: 0.3;"></button>
-                <div id="circ" style="position: absolute; margin: 30% 30%; border-radius: 50%; border: 3px solid #111; width: 38%;   height: 38%; background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, #777777 80%), #004; color: #fff; box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);">
-                    <a asp-controller="Games" asp-action="SimonSays" name="SimonSays">
-                        @(Model.sequenceCounter != 0 ? Model.sequenceCounter : "Play")
-                        WORK PLEASE :/
-                        @TempData["test"] IS ALWAYS 1, WHY!!
+
+                @for (int i = 0; i < Model.Count; i++) // four simon says blocks
+                {
+                    <a onclick="location.href='@Url.Action("SimonSays", "Games", Model[i])'" class="btn-simon btn-simon-@Model[i].currentColor" style="opacity: 0.3;" asp-controller="Games" asp-action="SimonSays" name="SimonSays">
+                        test aab4
                     </a>
+                }
+                <div id="circ" style="position: absolute; margin: 30% 30%; border-radius: 50%; border: 3px solid #111; width: 38%;   height: 38%; background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 60%, #777777 80%), #004; color: #fff; box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);">
                 </div>
             </div>
             <div id="msg" style="display: flex; align-items: center; justify-content: center; text-align: center; position: absolute; left: 40%; top: 40%; font: 9vmin Arial; width: 20%; height: 20%; color: rgb(187, 204, 255); pointer-events: none;">
-                              
-
+                <a asp-controller="Games" asp-action="SimonSays" name="SimonSays">
+                    @((int)TempData["test"] != 0 ? (int)TempData["test"] : "Play")
+                </a>
             </div>
         </div>
+    </div>
+    <div id="myDiv" class="container" runat="server"> 
+        Test
     </div>
 </div>
