Removing delete view in favor of AJAX and JS deletion w/ api.

--- a/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -2,8 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to Tylor Trub's portfolio.</h1>
+<div class="container text-center">
+    <h3 class="display-4">Hello, my name is Tylor Trub.</h3>
+    <p>I am a full-stack developer, with a C#.NET back-end focus.</p>
+    <p>Check out my projects, example labs, and examples of my work above.</p>
+    <p>I host the majority of my code on <a href="https://github.com/DontDoThat21">GitHub</a>.</p>
+    <p>Feel free to relax and play some <a asp-controller="Games" asp-action="Index">HTML5/CSS3 games</a> I've created.</p>
+    <p>Available 8am EST to 5pm EST. <a href="mailto:tylortrub@gmail.com">tylortrub@gmail.com</a></p>
 </div>
-
-<a href="www.google.com">Test me google link.</a>
