--- a/TylorBookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/TylorBookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -22,7 +22,7 @@
             </a>
         </div>
     </div>
-    <table class="table table-bordered table-striped">
+    <table id="tblData" class="table table-bordered table-striped">
         <tr>
             <th>Title</th>
             <th>ISBN</th>
@@ -31,37 +31,9 @@
             <th>Category</th>
             <th></th>
         </tr>
-        <tbody>
-            @foreach (var obj in Model)
-            {
-                <tr>
-                    <td>
-                        @obj.Title
-                    </td>
-                    <td>
-                        @obj.ISBN
-                    </td>
-                    <td>
-                        @obj.ListPrice
-                    </td>
-                    <td>
-                        @obj.Author
-                    </td>
-                    <td>
-                        @obj.Category.Name
-                    </td>
-                    <td>
-                        <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Product" asp-action="Upsert" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i> Edit
-                            </a>
-                            <a asp-controller="Product" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash"></i> Delete
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            }
-        </tbody>
     </table>
 </div>
+
+@section Scripts {
+    <script src="~/js/product.js"></script>
+}
