Added details view. Added stock images for products. Added new home controller routes. Added index code.

--- a/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -10,3 +10,9 @@
     <p>Feel free to relax and play some <a asp-controller="Games" asp-action="Index">HTML5/CSS3 games</a> I've created.</p>
     <p>Available 8am EST to 5pm EST. <a href="mailto:tylortrub@gmail.com">tylortrub@gmail.com</a></p>
 </div>
+
+<h2>
+    <a asp-controller="Home" asp-action="MVCDemo">
+        Check out my latest MVC .NET 8 project!
+    </a>
+</h2>
