Saving work for today.

--- a/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    string homeImagesIndex = "";
 }
 
 <div class="container text-center">
@@ -11,8 +12,28 @@
     <p>Available 8am EST to 5pm EST. <a href="mailto:tylortrub@gmail.com">tylortrub@gmail.com</a></p>
 </div>
 
-<h2>
+<h2 class="text-center">
     <a asp-controller="Home" asp-action="MVCDemo">
         Check out my latest MVC .NET 8 project!
     </a>
 </h2>
+
+<div class="container row">
+    <div class="col-1 ">
+        Motorcycling is a big hobby of mine. As you scroll down, 
+        you will see more of my travels, 
+        what I like to do for fun, 
+        and core pieces of me.
+        <br />
+        <img src="~/Images/home/homebike3.jpg" width="300px" height="400px" class="border-0 rounded">
+        <p>todo: make image line to resource</p>
+    </div>
+    <br />
+    <div class="col-2">
+        I picked up motorcycling as an exciting hobby as a teenager,
+        traveling around the states in my evenings and weekends!
+        <br />
+        <img src="~/Images/home/homehelmetinworklol1.jpg" width="300px" height="400px" class="border-0 rounded">
+        <p>todo: make image line to resource</p>
+    </div>
+</div>
