Improved/fixed basic home page grid. Work in progress. Finishing up soon for tonight.

--- a/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorBookStore/Areas/Customer/Views/Home/Index.cshtml
@@ -18,22 +18,59 @@
     </a>
 </h2>
 
-<div class="container row">
-    <div class="col-1 ">
-        Motorcycling is a big hobby of mine. As you scroll down, 
-        you will see more of my travels, 
-        what I like to do for fun, 
-        and core pieces of me.
-        <br />
-        <img src="~/Images/home/homebike3.jpg" width="300px" height="400px" class="border-0 rounded">
-        <p>todo: make image line to resource</p>
+<div class="container">
+    <div class="row">
+        <div class="col" style="border: 1px solid red;">
+            Motorcycling is a big hobby of mine. As you scroll down,
+            you will see more of my travels,
+            what I like to do for fun,
+            and core pieces of me.
+            <br />
+            <img src="~/Images/home/homebike3.jpg" width="300px" height="400px" class="border-0 rounded">
+            <p>todo: make image line to next resource</p>
+
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
     </div>
-    <br />
-    <div class="col-2">
-        I picked up motorcycling as an exciting hobby as a teenager,
-        traveling around the states in my evenings and weekends!
-        <br />
-        <img src="~/Images/home/homehelmetinworklol1.jpg" width="300px" height="400px" class="border-0 rounded">
-        <p>todo: make image line to resource</p>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col" style="border: 1px solid red;">
+            I picked up motorcycling as an exciting hobby as a teenager,
+            traveling around the states in my evenings and weekends!
+            <br />
+            <img src="~/Images/home/homehelmetinworklol1.jpg" width="300px" height="400px" class="border-0 rounded">
+            <p>todo: make image line to next resource</p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-6" style="border: 1px solid red;">
+            I have experience directing the software processes behind automotive large shows, 
+            as well as first hand physical layer support for internal users of intranet applications.
+            <br />
+            <img src="~/Images/home/homemiwork1.jpg" width="400px" height="300px" class="border-0 rounded">
+            <p>todo: make image line to next resource</p>
+        </div>
+        <div class="col-3" style="border: 1px solid red;">
+            test
+        </div>
+        <div class="col-3" style="border: 1px solid red;">
+            test
+        </div>
     </div>
 </div>
